# accessor

./: .cargo_vcs_info.json  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
accessor_macros/: Cargo.toml
accessor_macros/src/: lib.rs
src/: array.rs  error.rs  lib.rs  mapper.rs  marker.rs  single.rs  todo.md
