[package]
name = "accessor"
version = "0.3.1"
authors = ["Hiroki Tokunaga <tokusan441@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library to access MMIO space"
repository = "https://github.com/toku-sa-n/accessor"
readme = "README.md"
categories = ["no-std", "os"]
keywords = ["no_std", "OS"]

[dependencies]
